--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.7.0",
     "react-icons": "^4.7.1"
